# wlocate

./: CMakeLists.txt  buf.c  buf.h  die.c  die.h  wlocate.c  wupdatedb.c
sada_csa/: 386.c  CMakeLists.txt  README  comparray4.c  comparray4.h  interface.h  mman.h  mmap.c  qsufsort.c  suftest3.test.c
